src/test/ui/const-generics/std/const-generics-range.min.stderr
error: `std::ops::Range<usize>` is forbidden as the type of a const generic parameter
  --> $DIR/const-generics-range.rs:7:24
   |
LL | struct _Range<const R: std::ops::Range<usize>>;
   |                        ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `RangeFrom<usize>` is forbidden as the type of a const generic parameter
  --> $DIR/const-generics-range.rs:12:28
   |
LL | struct _RangeFrom<const R: std::ops::RangeFrom<usize>>;
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `RangeFull` is forbidden as the type of a const generic parameter
  --> $DIR/const-generics-range.rs:17:28
   |
LL | struct _RangeFull<const R: std::ops::RangeFull>;
   |                            ^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `RangeInclusive<usize>` is forbidden as the type of a const generic parameter
  --> $DIR/const-generics-range.rs:23:33
   |
LL | struct _RangeInclusive<const R: std::ops::RangeInclusive<usize>>;
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `RangeTo<usize>` is forbidden as the type of a const generic parameter
  --> $DIR/const-generics-range.rs:28:26
   |
LL | struct _RangeTo<const R: std::ops::RangeTo<usize>>;
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `RangeToInclusive<usize>` is forbidden as the type of a const generic parameter
  --> $DIR/const-generics-range.rs:33:35
   |
LL | struct _RangeToInclusive<const R: std::ops::RangeToInclusive<usize>>;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 6 previous errors

